// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`existing service page rendering phone 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          BOS:311 Home
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/search"
          onClick={[Function]}
        >
          Search cases
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/services"
          onClick={[Function]}
        >
          All services
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="mn--full css-y96f4i"
    role="main"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className="mn-fixed-child css-dnm6i8"
    />
    <div
      className="css-15m5iw4"
    >
      <div
        className="js-form-dialog p-a300 p-a800--xl br br-t400 br--y css-1ok9b9p"
        style={Object {}}
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className=" sh sh--y "
          >
            <h1
              className="sh-title"
            >
              Cosmic Incursion
            </h1>
          </div>
          <div
            className="t--intro m-v300"
          >
            Bad things getting in from other universes
          </div>
          <div
            className="g g--top"
          >
            <div
              className="g--7 m-v500"
            >
              <div
                className="txt"
              >
                <label
                  className="txt-l"
                  htmlFor="QuestionsPane-description"
                  style={
                    Object {
                      "marginTop": 0,
                    }
                  }
                >
                  Describe your request
                </label>
                <textarea
                  className="txt-f"
                  id="QuestionsPane-description"
                  name="description"
                  onChange={[Function]}
                  placeholder="What can we help with?"
                  rows={5}
                  value=""
                />
              </div>
              <div>
                <div
                  className="txt"
                >
                  <label
                    className="txt-l"
                    htmlFor="ST-CMTS"
                  >
                    Please provide any other relevant information:
                     
                  </label>
                  <textarea
                    aria-required={false}
                    className="txt-f"
                    id="ST-CMTS"
                    name="ST-CMTS"
                    onChange={[Function]}
                    rows={5}
                    value=""
                  />
                </div>
              </div>
              <hr
                aria-hidden={true}
                className="hr hr--dash m-v500"
              />
              <div>
                <div
                  className="txt"
                >
                  <label
                    className="txt-l"
                    htmlFor="INFO-CSIRMV1"
                  >
                    **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
                     
                  </label>
                  <input
                    aria-required={false}
                    className="txt-f "
                    id="INFO-CSIRMV1"
                    name="INFO-CSIRMV1"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <hr
                aria-hidden={true}
                className="hr hr--dash m-v500"
              />
              <div>
                <div
                  aria-labelledby="SR-CSIRMV1-label"
                  role="radiogroup"
                >
                  <div
                    className="m-v300"
                  >
                    <label
                      className="txt-l"
                      id="SR-CSIRMV1-label"
                    >
                      How many dimensions have been breached?
                       
                      <span
                        className="t--req"
                      >
                        Required
                      </span>
                    </label>
                  </div>
                  <div
                    className="g"
                  >
                    <div
                      className="g--12"
                    >
                      <div
                        className="ra"
                      >
                        <input
                          checked={false}
                          className="ra-f"
                          id="SR-CSIRMV1-One"
                          name="SR-CSIRMV1"
                          onChange={[Function]}
                          type="radio"
                          value="One"
                        />
                        <label
                          className="ra-l"
                          htmlFor="SR-CSIRMV1-One"
                        >
                          One
                        </label>
                      </div>
                      <div
                        className="ra"
                      >
                        <input
                          checked={false}
                          className="ra-f"
                          id="SR-CSIRMV1-Two"
                          name="SR-CSIRMV1"
                          onChange={[Function]}
                          type="radio"
                          value="Two"
                        />
                        <label
                          className="ra-l"
                          htmlFor="SR-CSIRMV1-Two"
                        >
                          Two
                        </label>
                      </div>
                      <div
                        className="ra"
                      >
                        <input
                          checked={false}
                          className="ra-f"
                          id="SR-CSIRMV1-Three"
                          name="SR-CSIRMV1"
                          onChange={[Function]}
                          type="radio"
                          value="Three"
                        />
                        <label
                          className="ra-l"
                          htmlFor="SR-CSIRMV1-Three"
                        >
                          Three
                        </label>
                      </div>
                      <div
                        className="ra"
                      >
                        <input
                          checked={false}
                          className="ra-f"
                          id="SR-CSIRMV1-More than Three"
                          name="SR-CSIRMV1"
                          onChange={[Function]}
                          type="radio"
                          value="More than Three"
                        />
                        <label
                          className="ra-l"
                          htmlFor="SR-CSIRMV1-More than Three"
                        >
                          More than Three
                        </label>
                      </div>
                      <span />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="g--5 m-v500"
            >
              <div
                className="br br-a200"
              >
                <div
                  aria-disabled={false}
                  className="css-1xobwt1"
                  onClick={[Function]}
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  style={
                    Object {
                      "position": "relative",
                    }
                  }
                >
                  <img
                    alt=""
                    aria-hidden={true}
                    height="324"
                    src="/assets/img/image-upload.png"
                    style={
                      Object {
                        "display": "block",
                        "height": "auto",
                        "width": "100%",
                      }
                    }
                    width="479"
                  />
                  <input
                    accept="image/*"
                    autoComplete="off"
                    disabled={false}
                    multiple={false}
                    onChange={[Function]}
                    style={
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "opacity": 0.00001,
                        "pointerEvents": "none",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                    type="file"
                  />
                </div>
                <div
                  className="br br-t200"
                  style={
                    Object {
                      "position": "relative",
                    }
                  }
                >
                  <button
                    className="btn btn--w btn--b"
                    onClick={[Function]}
                    style={
                      Object {
                        "visibility": "visible",
                        "width": "100%",
                      }
                    }
                    type="button"
                  >
                    Upload Photo
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="g m-v500 css-zcxndt"
          >
            <div
              className="g--9 t--info m-v200 css-1gz4i5v"
            >
              <span>
                Please fill out 
                <span
                  className="t--req"
                >
                  required
                </span>
                 fields to continue
              </span>
            </div>
            <button
              className="btn g--3"
              disabled={true}
              type="submit"
            >
              Next
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <footer
    className="ft"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
    <div class=\\"ft-c\\">
      <ul class=\\"ft-ll ft-ll--r\\">
        <li class=\\"ft-ll-i\\"><a href=\\"http://www.cityofboston.gov/311/\\" class=\\"ft-ll-a lnk--yellow\\"><span class=\\"ft-ll-311\\">BOS:311</span><span class=\\"tablet--hidden\\"> - </span>Report an issue</a></li>
      </ul>
      

<ul class=\\"ft-ll\\"><li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/innovation-and-technology/privacy-and-security-statement\\" target=\\"_blank\\" title=\\"\\" class=\\"ft-ll-a\\">Privacy Policy</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/mayors-office/contact-boston-city-hall\\" title=\\"\\" class=\\"ft-ll-a\\">Contact us</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/digital-team/city-boston-alerts-and-notifications\\" title=\\"\\" class=\\"ft-ll-a\\">Alerts and notifications</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/public-records\\" title=\\"\\" class=\\"ft-ll-a\\">Public records requests</a></li>
</ul>    </div>
  ",
      }
    }
    style={
      Object {
        "position": "relative",
        "zIndex": 2,
      }
    }
  />
  <div
    className="css-18fvojj"
  >
    <div
      className="css-2efia3 css-dkv4oo"
    >
      <span
        className="t--subtitle t--upper"
      >
        Welcome to the new 311:
      </span>
       
      <span
        className="t--info t--s100"
      >
        We would love to hear your
         
        <button
          className="lnk t--w"
          onClick={[Function]}
          type="button"
        >
          feedback
        </button>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`existing service page rendering phone location step 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          BOS:311 Home
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/search"
          onClick={[Function]}
        >
          Search cases
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/services"
          onClick={[Function]}
        >
          All services
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="mn--full css-y96f4i"
    role="main"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className="mn-fixed-child css-dnm6i8"
    />
    <div
      className="css-18ppl9p"
    >
      <div
        className="js-form-dialog  br br-t400 br--y css-1ok9b9p"
        style={Object {}}
      >
        <div
          className="css-1v26nfd"
        >
          <div
            className="css-yy347q"
          />
          <div
            className="css-1gx8zcz"
          >
            <div
              className="p-a300"
            >
              <form
                action="#"
                className="sf sf--md sf--y"
                onSubmit={[Function]}
              >
                <div
                  className="sf-i"
                >
                  <input
                    aria-label="Address search field"
                    className="sf-i-f"
                    onChange={[Function]}
                    placeholder="Search address…"
                    type="text"
                    value=""
                  />
                  <button
                    className="sf-i-b"
                    disabled={true}
                    type="submit"
                  >
                    Search
                  </button>
                </div>
              </form>
            </div>
            <div
              className="css-1d3uvm0"
            />
            <div
              className="g p-a300 css-zcxndt"
            >
              <button
                className="btn g--5"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                Next
              </button>
              <div
                className="g--7 t--subinfo m-v200"
              >
                <button
                  className="lnk"
                  onClick={[Function]}
                  type="button"
                >
                  Continue without location
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="ft"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
    <div class=\\"ft-c\\">
      <ul class=\\"ft-ll ft-ll--r\\">
        <li class=\\"ft-ll-i\\"><a href=\\"http://www.cityofboston.gov/311/\\" class=\\"ft-ll-a lnk--yellow\\"><span class=\\"ft-ll-311\\">BOS:311</span><span class=\\"tablet--hidden\\"> - </span>Report an issue</a></li>
      </ul>
      

<ul class=\\"ft-ll\\"><li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/innovation-and-technology/privacy-and-security-statement\\" target=\\"_blank\\" title=\\"\\" class=\\"ft-ll-a\\">Privacy Policy</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/mayors-office/contact-boston-city-hall\\" title=\\"\\" class=\\"ft-ll-a\\">Contact us</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/digital-team/city-boston-alerts-and-notifications\\" title=\\"\\" class=\\"ft-ll-a\\">Alerts and notifications</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/public-records\\" title=\\"\\" class=\\"ft-ll-a\\">Public records requests</a></li>
</ul>    </div>
  ",
      }
    }
    style={
      Object {
        "position": "relative",
        "zIndex": 2,
      }
    }
  />
  <div
    className="css-18fvojj"
  >
    <div
      className="css-2efia3 css-dkv4oo"
    >
      <span
        className="t--subtitle t--upper"
      >
        Welcome to the new 311:
      </span>
       
      <span
        className="t--info t--s100"
      >
        We would love to hear your
         
        <button
          className="lnk t--w"
          onClick={[Function]}
          type="button"
        >
          feedback
        </button>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`missing service page rendering 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          BOS:311 Home
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/search"
          onClick={[Function]}
        >
          Search cases
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/services"
          onClick={[Function]}
        >
          All services
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="mn--full css-y96f4i"
    role="main"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className="mn-fixed-child css-dnm6i8"
    />
    <div
      className="css-15m5iw4"
    >
      <div
        className="js-form-dialog p-a300 p-a800--xl br br-t400 br--y css-1ok9b9p"
        style={Object {}}
      >
        <div
          style={
            Object {
              "minHeight": "50vh",
            }
          }
        >
          <div
            className=" sh sh--y "
          >
            <h1
              className="sh-title"
            >
              Service not found
            </h1>
          </div>
          <div
            className="m-v400 t--intro"
          >
            We couldn’t load a service for code 
            <strong>
              CSMCINC
            </strong>
            .
          </div>
          <div
            className="m-v400 t--info"
          >
            The link you followed may be outdated, or this service is not available at the moment.
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="ft"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
    <div class=\\"ft-c\\">
      <ul class=\\"ft-ll ft-ll--r\\">
        <li class=\\"ft-ll-i\\"><a href=\\"http://www.cityofboston.gov/311/\\" class=\\"ft-ll-a lnk--yellow\\"><span class=\\"ft-ll-311\\">BOS:311</span><span class=\\"tablet--hidden\\"> - </span>Report an issue</a></li>
      </ul>
      

<ul class=\\"ft-ll\\"><li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/innovation-and-technology/privacy-and-security-statement\\" target=\\"_blank\\" title=\\"\\" class=\\"ft-ll-a\\">Privacy Policy</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/mayors-office/contact-boston-city-hall\\" title=\\"\\" class=\\"ft-ll-a\\">Contact us</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/digital-team/city-boston-alerts-and-notifications\\" title=\\"\\" class=\\"ft-ll-a\\">Alerts and notifications</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/public-records\\" title=\\"\\" class=\\"ft-ll-a\\">Public records requests</a></li>
</ul>    </div>
  ",
      }
    }
    style={
      Object {
        "position": "relative",
        "zIndex": 2,
      }
    }
  />
  <div
    className="css-18fvojj"
  >
    <div
      className="css-2efia3 css-dkv4oo"
    >
      <span
        className="t--subtitle t--upper"
      >
        Welcome to the new 311:
      </span>
       
      <span
        className="t--info t--s100"
      >
        We would love to hear your
         
        <button
          className="lnk t--w"
          onClick={[Function]}
          type="button"
        >
          feedback
        </button>
        .
      </span>
    </div>
  </div>
</div>
`;
